--- a/index.html
+++ b/index.html
@@ -332,19 +332,19 @@
           <h1 class="text-center">Projet</h1>
           <div class="container">
             <div class="text-center col-sm-6">
-              <img class='container responsive30' src="assets/img/project/logo/champsDuPossible.png" alt="">
+              <img class='container responsive30' src="assets/img/project/champsDuPossible.png" alt="">
               <h4>Campus Champs du Possible</h4>
               <p>Création d'AfterWork avec le Campus Champs du Possible</p>
               <a href="https://www.facebook.com/events/1905798189700043/" class="fa fa-facebook fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-6">
-              <img class='container responsive30' src="assets/img/project/logo/agriRescue.png" alt="">
+              <img class='container responsive30' src="assets/img/project/agriRescue.png" alt="">
               <h4>Agri-Rescue</h4>
               <p>Création du site web pour la start-up Agri-Rescue</p>
               <a href="http://www.Agri-Rescue.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <!-- <div class="text-center col-sm-4">
-              <img class='container responsive60' src="assets/img/project/logo/perrette.jpg" alt="">
+              <img class='container responsive60' src="assets/img/project/perrette.jpg" alt="">
               <h4>Bureau Information Jeunesse</h4>
               <a href="" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
               <a href="" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
@@ -356,25 +356,25 @@
           <div class="container">
             <h1 class="text-center">Hackathon</h1>
             <div class="text-center col-sm-3">
-              <img class='container responsive60' src="assets/img/project/logo/agreenstartup.png" alt="">
+              <img class='container responsive60' src="assets/img/project/agreenstartup.png" alt="">
               <h4>Agreen Start-Up 2016 <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
               <p>2eme Prix - Hackathon Agreen StartUp 2016 - 48H</p>
               <a href="https://github.com/Celine-Langlade/Agrivideo" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-3">
-              <img class='container responsive60' src="assets/img/project/logo/wcs.png" alt="">
+              <img class='container responsive60' src="assets/img/project/wcs.png" alt="">
               <h4>Wild Code School <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
               <p>1er Prix - Hackathon Wild Codes School - 31H</p>
               <a href="https://github.com/Jipsian/Hackathon-Movember" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-3">
-              <img class='container responsive60' src="assets/img/project/logo/urotech.png" alt="">
+              <img class='container responsive60' src="assets/img/project/urotech.png" alt="">
               <h4>Uro-Tech Challenge <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
               <p>1er Prix - Hackathon Airliquid - 24H</p>
               <a href="https://github.com/stephsen/Hackathon_urotech" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-3">
-              <img class='container responsive60' src="assets/img/project/logo/airliquide.png" alt="">
+              <img class='container responsive60' src="assets/img/project/airliquide.png" alt="">
               <h4>Air liquide <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
               <p>Prix du jury - Hackathon Uro-Tech Challenge - 24H</p>
               <a href="https://github.com/Jipsian/hackathon-b-come" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
@@ -388,25 +388,25 @@
             <h1 class="text-center">Perso</h1>
             <div class="row">
               <div class="text-center col-sm-3">
-                <img class='container responsive60' src="assets/img/project/logo/nopsis.png" alt="">
+                <img class='container responsive60' src="assets/img/project/nopsis.png" alt="">
                 <h4>Nopsis</h4>
                 <p>Le blog qui se résume</p>
                 <a href="http://nopsisblog.wordpress.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-3">
-                <img class='container responsive60' src="assets/img/project/logo/blog.png" alt="">
+                <img class='container responsive60' src="assets/img/project/blog.png" alt="">
                 <h4>CamJr Blog</h4>
                 <p>Blog perso</p>
                 <a href="" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-3">
-                <img class='container responsive60' src="assets/img/project/logo/repereage.png" alt="">
+                <img class='container responsive60' src="assets/img/project/repereage.png" alt="">
                 <h4>Repère-Age</h4>
                 <p>Réalisation d'un album photo sur la ville de Châteaudun, ville située en Eure-Et-Loir.</p>
                 <a href="https://flic.kr/s/aHskBXxZtA" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-3">
-                <img class='container responsive60' src="assets/img/project/logo/blog.png" alt="">
+                <img class='container responsive60' src="assets/img/project/blog.png" alt="">
                 <h4>Lotus X mjml</h4>
                 <p>Light is right</p>
                 <a href="https://github.com/CamJr/lotusXmjml/" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
