--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CamJR - Portfolio</title>
-  <meta name="description" content="Camille Antoine Fontaine a.k.a CamJr, je suis Developpeur web, graphiste et webdesigner" />
+  <title>CamJr - Portfolio</title>
+  <meta name="description" content="Camille Antoine Fontaine a.k.a CamJr, je suis developpeur web, graphiste et webdesigner" />
   <link rel="shortcut icon" href="assets/img/logo.jpg">
 
 
@@ -427,10 +427,25 @@
           <img class='container' src="assets/img/graphisme/monsterCastle.jpg" alt="">
         </div>
         <div class="slide">
+          <img class='container responsive10' src="assets/img/graphisme/agriRescue.png" alt="">
+        </div>
+        <div class="slide">
+          <img class='container' src="assets/img/graphisme/firestone.png" alt="">
+        </div>
+        <div class="slide">
+          <img class='container' src="assets/img/graphisme/lcs.png" alt="">
+        </div>
+        <div class="slide">
           <img class='container' src="assets/img/graphisme/crealisa.jpg" alt="">
         </div>
         <div class="slide">
           <img class='container' src="assets/img/graphisme/stephsen.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img class='container responsive10' src="assets/img/graphisme/play.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img class='container' src="assets/img/graphisme/funtastic.png" alt="">
         </div>
       </div>
 
