--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h1 class="container">
                   À propos
                 </h1>
-          <p class="container">Camille Antoine Fontaine a.k.a CamJr, je suis Developpeur web, graphiste et webdesigner </p><br>
+          <p class="container">Camille Antoine Fontaine a.k.a CamJr, Developpeur web, graphiste et webdesigner </p><br>
           <h1 class="container">
               Bio
             </h1>
