--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <h1 class="container">
               Bio
             </h1>
-          <p class="container">Originaire de Châteaudun (Eure-et-Loir). Je suis créatif et touche-à-tout – photo, vidéo, musique. j'ai toujours eu la passion des ordinateurs, d’Internet et du développement web.éo et un album photo en ligne. J'ai intégré la session de formation
+          <p class="container">Originaire de Châteaudun (Eure-et-Loir). Je suis créatif et touche-à-tout – photo, vidéo, musique. j'ai toujours eu la passion des ordinateurs, d’Internet et du développement web, ce qui m'a conduit à créer un chaîne YouTube, un blog autour de créations vidéo et un album photo en ligne. J'ai intégré la session de formation
             de septembre 2016 à la Wild Code School de La Loupe.</p>
         </div>
         <div class="slide">
@@ -402,7 +402,7 @@
               <div class="text-center col-sm-3">
                 <img class='container responsive60' src="assets/img/project/repereage.png" alt="">
                 <h4>Repère-Age</h4>
-                <p>Réalisation d'un album photo sur la ville de Châteaudun, ville située en Eure-Et-Loir.</p>
+                <p>Réalisation d'un album photo.</p>
                 <a href="https://flic.kr/s/aHskBXxZtA" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-3">
