correction faute image etc

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="text-center col-sm-3">
               <img class='container responsive60' src="assets/img/project/agreenstartup.png" alt="">
               <h4>Agreen Start-Up 2016 <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
-              <p>2eme Prix - Hackathon Agreen StartUp 2016 - 48H</p>
+              <p>2eme Prix - Hackathon Agreen StartUp - 48H</p>
               <a href="https://github.com/Celine-Langlade/Agrivideo" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-3">
@@ -370,13 +370,13 @@
             <div class="text-center col-sm-3">
               <img class='container responsive60' src="assets/img/project/urotech.png" alt="">
               <h4>Uro-Tech Challenge <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
-              <p>1er Prix - Hackathon Airliquid - 24H</p>
+              <p>Prix du jury - Hackathon Uro-Tech Challenge - 24H</p>
               <a href="https://github.com/stephsen/Hackathon_urotech" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
             <div class="text-center col-sm-3">
               <img class='container responsive60' src="assets/img/project/airliquide.png" alt="">
               <h4>Air liquide <i class="fa fa-trophy fa-1x yellow-text" aria-hidden="true"></i></h4>
-              <p>Prix du jury - Hackathon Uro-Tech Challenge - 24H</p>
+              <p>1er Prix - Hackathon Airliquid France - 24H</p>
               <a href="https://github.com/Jipsian/hackathon-b-come" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
             </div>
           </div>
@@ -406,7 +406,7 @@
                 <a href="https://flic.kr/s/aHskBXxZtA" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-3">
-                <img class='container responsive60' src="assets/img/project/blog.png" alt="">
+                <img class='container responsive60' src="assets/img/project/lotus.png" alt="">
                 <h4>Lotus X mjml</h4>
                 <p>Light is right</p>
                 <a href="https://github.com/CamJr/lotusXmjml/" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
