--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>CamJr - Portfolio</title>
   <meta name="description" content="Camille Antoine Fontaine a.k.a CamJr, je suis developpeur web, graphiste et webdesigner" />
   <link rel="shortcut icon" href="assets/img/logo.jpg">
+  <meta property="og:image" content="assets/img/camjr.jpg">
 
 
   <link type="text/css" rel="stylesheet" href="js/libs/bootstrap/css/bootstrap.min.css" media="screen,projection" />
