--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>CamJr - Portfolio</title>
   <meta name="description" content="Camille Antoine Fontaine a.k.a CamJr, je suis developpeur web, graphiste et webdesigner" />
+  <meta property="og:image" content="assets/img/logo.jpg">
   <link rel="shortcut icon" href="assets/img/logo.jpg">
-  <meta property="og:image" content="assets/img/camjr.jpg">
 
 
   <link type="text/css" rel="stylesheet" href="js/libs/bootstrap/css/bootstrap.min.css" media="screen,projection" />
