modif meta http

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CamJr - Portfolio</title>
+  <title>CamJr - Developpeur web Jr - Graphiste et WebDesigner</title>
   <meta name="description" content="Camille Antoine Fontaine a.k.a CamJr, je suis developpeur web, graphiste et webdesigner" />
-  <meta property="og:image" content="assets/img/logo.jpg">
+  <meta property="og:image" content="https://camjr.github.io/assets/img/logo.jpg">
   <link rel="shortcut icon" href="assets/img/logo.jpg">
 
 
