--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="slide text-center">
           <img src="assets/img/logo.png" alt="photo de profil" /><br>
           <div class="keyboard">
-          <a><img  class="responsive3" src="assets/img/arrowUp.jpg" alt="arrowHaut" /></a><br>
+          <a><img  class="responsive3" src="assets/img/arrowUP.jpg" alt="arrowHaut" /></a><br>
           <a><img  class="responsive3" src="assets/img/arrowLeft.jpg" alt="arrowGauche" /></a>
           <a ><img  class="responsive3 arrow" src="assets/img/arrowDown.jpg" alt="arrowBas" /></a>
           <a><img class="responsive3 arrow" src="assets/img/arrowRight.jpg" alt="arrowDroite" /></a>
