--- a/index.html
+++ b/index.html
@@ -128,13 +128,11 @@
     </div>
 
     <footer class="navbar navbar-custom navbar-fixed-bottom">
-      <div class="collapse navbar-collapse">
-        <ul id="menu" class="navHover nav navbar-nav navbar-right">
-          <li><a>Copyright © 2017 CamJr</a></li>
-          <li><a data-toggle="modal" data-target="#myModalMention">Mentions Légales</a></li>
-          <li><a data-toggle="modal" data-target="#myModalHelp">Help</a></li>
-        </ul>
-      </div>
+      <a class="navbar-brand"></a>
+      <a class="navbar-brand"></a>
+      <a class="navbar-brand">Copyright © 2017 CamJr</a>
+      <a class="navbar-brand" data-toggle="modal" data-target="#myModalMention">Mentions Légales</a>
+      <a class="navbar-brand" data-toggle="modal" data-target="#myModalHelp">Help</a>
     </footer>
 
 
