--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 
             <div class="container">
               <div class="text-center">
+                <h1 class="grey-text">Projet recént</h1>
                 <h1>Composites & Technologies</h1>
                 <p>Client | Scorel | 2017 </p>
                 <p>Amélioration de la plateforme de supervision dématérialisée.<br> Ajout de fonctionnalité (Impression des graphiques, Api GoogleMaps).</p>
@@ -270,6 +271,7 @@
 
             <div class="container">
               <div class="text-center">
+                <h1 class="grey-text">Projet recént</h1>
                 <h1>Bureau Information Jeunesse</h1>
                 <p>Vrai du Faux | BIJ | 2016 - 2017 </p>
                 <p>Création d’une application web pour le Bureau d’Information de Jeunesse <br> Le Vrai du Faux est un journal interactif autour de l’éducation aux médias et à l’information.<br> Création de page animés et mise en place d’un mode hors ligne.
@@ -346,6 +348,7 @@
 
             <div class="container">
               <div class="text-center">
+                <h1 class="grey-text">Projet recént</h1>
                 <h1>Hopital de la Loupe</h1>
                 <p>Hopital | 2016 </p>
                 <p>réation d'un site administrable pour l'hôpital de La Loupe.<br> Le site web à la possibilité d'ajouter, de modifier, de supprimer un contenu (article, contact...)
@@ -401,26 +404,21 @@
         <div class="section">
           <!-- Projet Slider  -->
           <div class="slide">
-            <h1 class="text-center">Projet</h1>
+            <h1 class="text-center">Projet en cours</h1>
             <div class="container">
               <div class="text-center col-sm-6">
                 <img class='container responsive30' src="assets/img/project/champsDuPossible.png" alt="">
                 <h4>Campus Champs du Possible</h4>
-                <p>Création d'AfterWork avec le Campus Champs du Possible</p>
+                <p>Création d'AfterWork avec le Campus Champs du Possible<br>Création des affiches et mise en place du live Facebook</p>
                 <a href="https://www.facebook.com/events/1905798189700043/" class="fa fa-facebook fa-3x" target="_blank" aria-hidden="true"></a>
+                <a href="https://campusleschampsdupossible.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
               <div class="text-center col-sm-6">
                 <img class='container responsive30' src="assets/img/project/agriRescue.png" alt="">
                 <h4>Agri-Rescue</h4>
-                <p>Création du site web pour la start-up Agri-Rescue</p>
+                <p>Création du logo Agri-Rescue et du site web<br> Communication sur les résaux sociaux</p>
                 <a href="http://www.Agri-Rescue.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
               </div>
-              <!-- <div class="text-center col-sm-4">
-              <img class='container responsive60' src="assets/img/project/perrette.jpg" alt="">
-              <h4>Bureau Information Jeunesse</h4>
-              <a href="" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
-              <a href="" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
-            </div> -->
             </div>
           </div>
 
@@ -457,33 +455,40 @@
 
           <div class="slide">
             <div class="container">
-              <h1 class="text-center">Perso</h1>
+              <h1 class="text-center">Projets Perso.</h1>
               <div class="row">
-                <div class="text-center col-sm-3">
-                  <img class='container responsive60' src="assets/img/project/nopsis.png" alt="">
-                  <h4>Nopsis</h4>
-                  <p>Le blog qui se résume</p>
-                  <a href="http://nopsisblog.wordpress.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
-                </div>
                 <div class="text-center col-sm-3">
                   <img class='container responsive60' src="assets/img/project/blog.png" alt="">
                   <h4>CamJr Blog</h4>
-                  <p>Blog perso</p>
-                  <a href="" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
+                  <p>Blog lifestyle (photographie, vidéo, articles)</p>
+                  <a href="http://camjrweb.wordpress.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
+                </div>
+                <div class="text-center col-sm-3">
+                  <img class='container responsive60' src="assets/img/project/nopsisNews.png" alt="">
+                  <h4>Nopsis</h4>
+                  <p>Blog d'actualité et de culture (film, série, musique...)</p>
+                  <a href="http://nopsisblog.wordpress.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
+                </div>
+                <div class="text-center col-sm-3">
+                  <img class='container responsive60' src="assets/img/project/nopsisWrestling.png" alt="">
+                  <h4>Nopsis Wrestling</h4>
+                  <p>[En cours] Actualité catch indépendant du monde entier ! </p>
+                  <a href="http://nopsiswrestling.wordpress.com" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
                 </div>
                 <div class="text-center col-sm-3">
                   <img class='container responsive60' src="assets/img/project/repereage.png" alt="">
                   <h4>Repère-Age</h4>
-                  <p>Réalisation d'un album photo.</p>
+                  <p>Réalisation d'un album photo sur la ville de Châteaudun.</p>
                   <a href="https://flic.kr/s/aHskBXxZtA" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
                 </div>
-                <div class="text-center col-sm-3">
+              </div>
+                <!-- <div class="text-center col-sm-3">
                   <img class='container responsive60' src="assets/img/project/lotus.png" alt="">
                   <h4>Lotus X mjml</h4>
                   <p>Light is right</p>
                   <a href="https://github.com/CamJr/lotusXmjml/" class="fa fa-github fa-3x" target="_blank" aria-hidden="true"></a>
                   <a href="https://camjr.github.io/lotusXmjml/" class="fa fa-globe fa-3x" target="_blank" aria-hidden="true"></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -647,8 +652,7 @@
           'Web Desiger',
           'Photographe',
           'Vidéaste',
-          'Couteau Suisse',
-          'Developpeur Web'
+          'Couteau Suisse'
         ];
         //used to determine which is the next roles to be displayed
         var counter = 0;
@@ -690,7 +694,7 @@
         $('#fullpage').fullpage({
           anchors: ['accueil', 'CetT', 'bij', 'hopital', 'dev', 'graphisme', 'photo', 'video', 'contact'],
           menu: '#menu',
-          // navigation: true,
+          navigation: true,
           // slidesNavigation: true,
         });
       });
